--- a/foodhub/src/components/profilRestaurateur/ProfilRestaurateur.css
+++ b/foodhub/src/components/profilRestaurateur/ProfilRestaurateur.css
@@ -21,9 +21,9 @@
 
 
 .photo-restaurant{
-    margin-top: 50px;
-    margin-left: 20px;
-    width : 50vh;
-    height: 300px;
-    border-radius: 100%;
+   size: "medium";
+   height: 150px;
+   width: 150;
+   border-radius: "50%";
+   justify-content: center;
 }
