recherche restaurant autour et commande ajout panier

--- a/foodhub/src/components/CommandeClient/commandeClient.css
+++ b/foodhub/src/components/CommandeClient/commandeClient.css
@@ -85,6 +85,11 @@
     font-size: 30px;
  }
 
+ .div-card-menu-restaurant{
+    display: flex;
+    flex-direction: row;
+ }
+
 
 @media screen and (max-width : 767px) {
 
