--- a/foodhub/src/components/cardCollection/cardHomePage.css
+++ b/foodhub/src/components/cardCollection/cardHomePage.css
@@ -10,18 +10,25 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    gap: 3vh;
 }
 
-.car-item-homePage{
+.card-item-homePage{
     border: 2px solid #1879ca;
-    padding: 0;
     background-color: white;
     width: 65vh; /* 33.33% pour 3 items par ligne avec espacement de 20px */
-    margin: 15px 7px;
     height: 53vh;
 }
 
-.ul-connect-restau{
+.car-image-homePage{
+    /*size: "medium";
+    width: 55vh;
+    height: auto;*/
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 35vh;
+    width: 50vh;
 }
 
 
