--- a/foodhub/src/components/administrateur/bdclient/DonneeClient.css
+++ b/foodhub/src/components/administrateur/bdclient/DonneeClient.css
@@ -1,7 +1,7 @@
 
 
 
-.modalBackground {
+.modalBackground-bdclien {
     width: 100vw;
     height: 100vh;
     position: fixed;
@@ -12,7 +12,7 @@
     z-index: 2;
   }
   
-  .modalContainer {
+  .modalContainer-bdclien {
     width: 95%;
     height: 95%;
     border-radius: 12px;
@@ -22,9 +22,24 @@
   
   
   
-  .titleCloseBtn {
+  .titleCloseBtn-bdclien {
     display: flex;
     justify-content: flex-end;
+  }
+
+
+  table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  th, td {
+    text-align: left;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #D6EEEE;
   }
   
   
